--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RC'
 - !lcsh 'Parkinson''s disease'
+- GITenberg
 title: An Essay on the Shaking Palsy
 url: http://www.gutenberg.org/ebooks/23777
